# kreeda-ai

./: .gitignore  LICENSE  README.md  divider.css  exercise.json  index.html  kreeda.css  manage.py  master.js  media.js  movenet.js  navbar.css  pyproject.toml
kreeda/: asgi.py  settings.py  urls.py  wsgi.py
kreeda/exercises/: admin.py  apps.py  models.py  urls.py  views.py
kreeda/exercises/migrations/: 0001_initial.py  0002_exercise_video_reference.py  0003_lessonplan_exerciseset.py  0004_alter_joints_tensorflow_model_number.py  0005_alter_joints_options_lessonplan_slug.py  0006_exercise_slug.py  0007_exercise_description.py  0008_alter_exercise_description.py  0009_joints_negative_error_angle_and_more.py
static/css/: output.css
static/js/: start.js
tailwind/: package-lock.json  package.json  tailwind.config.js
tailwind/src/: main.css
templates/: _base.html  _footer.html  _navbar.html  example.html
templates/exercises/: exercise_detail.html  exercise_list.html  exercise_start.html  lessonplan_detail.html  lessonplan_list.html
